--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Landing</title>
+    <link rel="stylesheet" href="style/common.css">
     <link rel="stylesheet" href="style/main.css">
     <script async type="text/javascript" src="javascript/sale.js"></script>
     <script async type="text/javascript" src="javascript/gallery.js"></script>
-    <script async type="text/javascript" src="javascript/popup.js"></script>
 </head>
 <header>
     <ul class="navigation inline">
@@ -14,7 +14,9 @@
             Продукция
         </li>
         <li>
-            О молоке
+            <a href="history.html">
+                О молоке
+            </a>
         </li>
         <li>
             Доставка
@@ -25,9 +27,9 @@
             </a>
         </li>
     </ul>
-    <div id='phone'>+77512580128</div>
+    <div class='phone'>+77512580128</div>
     <a href="#">
-        <img id='logo' src="img/logo.png" alt="">
+        <img id='logo' src="img/main/logo.png" alt="">
     </a>
 </header>
 <div class="space">
@@ -45,7 +47,7 @@
         </div>
     </div>
     <div id="photo-banner">
-        <img id="photo-banner-img" src="img/milk.png" alt="">
+        <img id="photo-banner-img" src="img/main/milk.png" alt="">
         <div class="slogan">
             С заботой о Вас и Ваших детях!
         </div>
@@ -79,9 +81,9 @@
         <!--Молоко-->
         <div class="item-list flex hidden switched">
             <div class="item">
-                <img class="info-img" src="img/info_icon.svg" alt="">
+                <img class="info-img" src="img/main/info_icon.svg" alt="">
                 <div class="wrapper">
-                    <img class="item-img horse" src="img/coumiss.png" alt="">
+                    <img class="item-img horse" src="img/main/coumiss.png" alt="">
                 </div>
                 <div class="item-description hidden">
                     <div class="cost"> 282 ₽/л</div>
@@ -96,9 +98,9 @@
                 </div>
             </div>
             <div class="item">
-                <img class="info-img" src="img/info_icon.svg" alt="">
+                <img class="info-img" src="img/main/info_icon.svg" alt="">
                 <div class="wrapper">
-                    <img class="item-img camel" src="img/бурдюк.png" alt="">
+                    <img class="item-img camel" src="img/main/бурдюк.png" alt="">
                 </div>
                 <div class="item-description hidden">
                     <div class="cost"> 590 ₽/л</div>
@@ -114,9 +116,9 @@
                 </div>
             </div>
             <div class="item">
-                <img class="info-img" src="img/info_icon.svg" alt="">
+                <img class="info-img" src="img/main/info_icon.svg" alt="">
                 <div class="wrapper">
-                    <img class="item-img cow" src="img/cow_milk.png" alt="">
+                    <img class="item-img cow" src="img/main/cow_milk.png" alt="">
                 </div>
                 <div class="item-description hidden">
                     <div class="cost"> 90 ₽/л</div>
@@ -133,9 +135,9 @@
                 </div>
             </div>
             <div class="item">
-                <img class="info-img" src="img/info_icon.svg" alt="">
+                <img class="info-img" src="img/main/info_icon.svg" alt="">
                 <div class="wrapper">
-                    <img class="item-img goat" src="img/shep_milk.png" alt="">
+                    <img class="item-img goat" src="img/main/shep_milk.png" alt="">
                 </div>
                 <div class="item-description hidden">
 
@@ -156,9 +158,9 @@
         <!--Сыр-->
         <div class="item-list flex hidden switched">
             <div class="item">
-                <img class="info-img" src="img/info_icon.svg" alt="">
+                <img class="info-img" src="img/main/info_icon.svg" alt="">
                 <div class="wrapper">
-                    <img class="item-img" src="img/iрiмшiк.png" alt="">
+                    <img class="item-img" src="img/main/iрiмшiк.png" alt="">
                 </div>
                 <div class="item-description hidden">
                     <div class="cost"> 100 ₽/кг</div>
@@ -169,9 +171,9 @@
                 </div>
             </div>
             <div class="item">
-                <img class="info-img" src="img/info_icon.svg" alt="">
+                <img class="info-img" src="img/main/info_icon.svg" alt="">
                 <div class="wrapper">
-                    <img class="item-img" src="img/Курт.png" alt="">
+                    <img class="item-img" src="img/main/Курт.png" alt="">
                 </div>
                 <div class="item-description hidden">
                     <div class="cost"> 120 ₽/кг</div>
@@ -187,9 +189,9 @@
         <!--Конина-->
         <div class="item-list flex hidden switched">
             <div class="item">
-                <img class="info-img" src="img/info_icon.svg" alt="">
+                <img class="info-img" src="img/main/info_icon.svg" alt="">
                 <div class="wrapper">
-                    <img class="item-img" src="img/Жая.png" alt="">
+                    <img class="item-img" src="img/main/Жая.png" alt="">
                 </div>
                 <div class="item-description hidden">
                     <div class="cost"> 500 ₽/кг</div>
@@ -206,9 +208,9 @@
                 </div>
             </div>
             <div class="item">
-                <img class="info-img" src="img/info_icon.svg" alt="">
+                <img class="info-img" src="img/main/info_icon.svg" alt="">
                 <div class="wrapper">
-                    <img class="item-img" src="img/казы.png" alt="">
+                    <img class="item-img" src="img/main/казы.png" alt="">
                 </div>
                 <div class="item-description hidden">
                     <div class="cost"> 800 ₽/кг</div>
@@ -224,9 +226,9 @@
                 </div>
             </div>
             <div class="item">
-                <img class="info-img" src="img/info_icon.svg" alt="">
+                <img class="info-img" src="img/main/info_icon.svg" alt="">
                 <div class="wrapper">
-                    <img class="item-img" src="img/Мойын.png" alt="">
+                    <img class="item-img" src="img/main/Мойын.png" alt="">
                 </div>
                 <div class="item-description hidden">
                     <div class="cost"> 450 ₽/кг</div>
@@ -238,9 +240,9 @@
                 </div>
             </div>
             <div class="item">
-                <img class="info-img" src="img/info_icon.svg" alt="">
+                <img class="info-img" src="img/main/info_icon.svg" alt="">
                 <div class="wrapper">
-                    <img class="item-img" src="img/Шужык.png" alt="">
+                    <img class="item-img" src="img/main/Шужык.png" alt="">
                 </div>
                 <div class="item-description hidden">
                     <div class="cost"> 400 ₽/кг</div>
@@ -260,9 +262,9 @@
     </div>
     <div class="item-list flex">
         <div class="item">
-            <img class="info-img" src="img/info_icon.svg" alt="">
+            <img class="info-img" src="img/main/info_icon.svg" alt="">
             <div class="wrapper">
-                <img class="item-img" src="img/all_cheese.png" alt="">
+                <img class="item-img" src="img/main/all_cheese.png" alt="">
             </div>
             <div class="item-description hidden">
                 <div class="cost"> 700 ₽</div>
@@ -273,9 +275,9 @@
             </div>
         </div>
         <div class="item">
-            <img class="info-img" src="img/info_icon.svg" alt="">
+            <img class="info-img" src="img/main/info_icon.svg" alt="">
             <div class="wrapper">
-                <img class="item-img" src="img/all_meat.png" alt="">
+                <img class="item-img" src="img/main/all_meat.png" alt="">
             </div>
             <div class="item-description hidden">
                 <div class="cost"> 900 ₽</div>
@@ -286,9 +288,9 @@
             </div>
         </div>
         <div class="item">
-            <img class="info-img" src="img/info_icon.svg" alt="">
+            <img class="info-img" src="img/main/info_icon.svg" alt="">
             <div class="wrapper">
-                <img class="item-img" src="img/all_milk.png" alt="">
+                <img class="item-img" src="img/main/all_milk.png" alt="">
             </div>
             <div class="item-description hidden">
                 <div class="cost"> 900 ₽</div>
@@ -336,7 +338,7 @@
     </div>
     <div class="feedback_messages flex">
         <div class="message left flex">
-            <img class="thumbnail" src="img/message-icon.jpg">
+            <img class="thumbnail" src="img/main/message-icon.jpg">
             <div class="content">
                 <div class="user_name">
                     Алена, 30 лет
@@ -347,7 +349,7 @@
             </div>
         </div>
         <div class="message right flex">
-            <img class="thumbnail" src="img/message-icon.jpg">
+            <img class="thumbnail" src="img/main/message-icon.jpg">
             <div class="content">
                 <div class="user_name">
                     Дмитрий, 20 лет
@@ -358,7 +360,7 @@
             </div>
         </div>
         <div class="message left flex">
-            <img class="thumbnail" src="img/message-icon.jpg">
+            <img class="thumbnail" src="img/main/message-icon.jpg">
             <div class="content">
                 <div class="user_name">
                     Нурлан, 24 года
