--- a/contact.html
+++ b/contact.html
@@ -97,6 +97,20 @@
 
     </div>
 </article>
+
+<section id="feedback_form">
+    <div class="title">
+        <h2>Оставить заявку:</h2>
+    </div>
+    <div class="feedback_form_block">
+        <form>
+            Email: <input type="email" name="email"><br>
+            Name: <input type="text" name="user_name"><br>
+            Message: <input type="text" name="message_text"><br>
+            <input type="button" name="submit" value="Submit" onclick="sendMessage()">
+        </form>
+    </div>
+</section>
 <div id="up_buttons">
     <a class="up_button btn" onclick="sendMessage()">
         📧
