--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Landing</title>
     <link rel="stylesheet" href="style/common.css">
     <link rel="stylesheet" href="style/main.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script async type="text/javascript" src="javascript/sale.js"></script>
     <script async type="text/javascript" src="javascript/gallery.js"></script>
+    <script async type="text/javascript" src="javascript/json_reader.js"></script>
 </head>
 <header>
     <ul class="navigation inline">
@@ -61,198 +63,19 @@
     </div>
     <div class="sale">
         <div class="switch-buttons flex">
-            <div class="btn chosen">
-                Популярное
-            </div>
-            <div class="btn">
-                Молоко
-            </div>
-            <div class="btn">
-                Сыр
-            </div>
-            <div class="btn">
-                Конина
-            </div>
+            <div class="btn chosen">Популярное</div>
+            <div class="btn">Молоко</div>
+            <div class="btn">Сыр</div>
+            <div class="btn">Конина</div>
         </div>
         <!--Популярное-->
-        <div class="item-list flex switched">
-
-        </div>
+        <div class="item-list flex switched"></div>
         <!--Молоко-->
-        <div class="item-list flex hidden switched">
-            <div class="item">
-                <img class="info-img" src="img/main/info_icon.svg" alt="">
-                <div class="wrapper">
-                    <img class="item-img horse" src="img/main/coumiss.png" alt="">
-                </div>
-                <div class="item-description hidden">
-                    <div class="cost"> 282 ₽/л</div>
-                    <span class="description-title ">
-                        Кумыс
-                    </span>
-                    Напиток отлично справляется с авитаминозами.
-                    Он хорошо восстанавливает силы после продолжительной болезни.
-                    Повышает иммунитет, давая возможность организму быстрее избавиться от простуды
-                    или бактериальной инфекции. Напиток из кобыльего молока содержит небольшое количество калорий, а
-                    потому его можно употреблять без опасений за фигуру.
-                </div>
-            </div>
-            <div class="item">
-                <img class="info-img" src="img/main/info_icon.svg" alt="">
-                <div class="wrapper">
-                    <img class="item-img camel" src="img/main/бурдюк.png" alt="">
-                </div>
-                <div class="item-description hidden">
-                    <div class="cost"> 590 ₽/л</div>
-                    <span class="description-title ">
-                        Шубат
-                    </span>
-                    Напиток рекомендуется включать в рацион людей страдающих
-                    от хронического гепатита, гастрита, кожных заболеваний,
-                    сахарного диабета. При поступлении в организм он усиливает
-                    выделительную функцию желудка, что способствует улучшению усвоения белков, жиров,
-                    углеводов. Кроме того, при регулярном употреблении 200 мл напитка в день снижается действие
-                    токсинов, повышается сопротивляемость организма.
-                </div>
-            </div>
-            <div class="item">
-                <img class="info-img" src="img/main/info_icon.svg" alt="">
-                <div class="wrapper">
-                    <img class="item-img cow" src="img/main/cow_milk.png" alt="">
-                </div>
-                <div class="item-description hidden">
-                    <div class="cost"> 90 ₽/л</div>
-                    <span class="description-title">
-                        Коровье молоко
-                    </span>
-                    Коровье молоко, богато питательными веществами , такими как белки, углеводы, жиры, витамины
-                    группы
-                    А, Е, К, С, D, В, РР и минералами. Белок коровьего молока является наиболее ценным, потому что
-                    он
-                    является источником всех аминокислот, необходимых для организма; казеина, глобулина и альбумина,
-                    которые особенно важны для детей и спортсменов.
-
-                </div>
-            </div>
-            <div class="item">
-                <img class="info-img" src="img/main/info_icon.svg" alt="">
-                <div class="wrapper">
-                    <img class="item-img goat" src="img/main/shep_milk.png" alt="">
-                </div>
-                <div class="item-description hidden">
-
-                    <div class="cost"> 400 ₽/кг</div>
-                    <span class="description-title ">
-                        Козье молоко
-                    </span>
-                    Это молоко полезно для всех. У него невысокая калорийность, поэтому его часто включают в
-                    диетическое
-                    меню, оно выводит токсины из организма и снижает уровень холестерина в крови.
-                    Козье молоко богато натуральным протеином, разгоняет метаболизм и повышает выносливость у
-                    мужчин,
-                    активно занимающихся спортом.
-                    Во время беременности этот продукт борется с дефицитом кальция и витамина В12 у молодых мам.
-                </div>
-            </div>
-        </div>
+        <div class="item-list flex hidden switched"></div>
         <!--Сыр-->
-        <div class="item-list flex hidden switched">
-            <div class="item">
-                <img class="info-img" src="img/main/info_icon.svg" alt="">
-                <div class="wrapper">
-                    <img class="item-img" src="img/main/iрiмшiк.png" alt="">
-                </div>
-                <div class="item-description hidden">
-                    <div class="cost"> 100 ₽/кг</div>
-                    <span class="description-title ">
-                        Iрiмшiк
-                    </span>
-                    Сладкий сыр из коровьего молока
-                </div>
-            </div>
-            <div class="item">
-                <img class="info-img" src="img/main/info_icon.svg" alt="">
-                <div class="wrapper">
-                    <img class="item-img" src="img/main/Курт.png" alt="">
-                </div>
-                <div class="item-description hidden">
-                    <div class="cost"> 120 ₽/кг</div>
-                    <span class="description-title ">
-                        Курт
-                    </span>
-                    Это соленый сушеный творог на основе овечьего молока.
-                    Готовое блюдо обладает ярко выраженным соленым вкусом с приятными сливочными нотками.
-                    В зависимости от компонентного состава он может быть кислым, сладким, острым или пряным.
-                </div>
-            </div>
-        </div>
+        <div class="item-list flex hidden switched"></div>
         <!--Конина-->
-        <div class="item-list flex hidden switched">
-            <div class="item">
-                <img class="info-img" src="img/main/info_icon.svg" alt="">
-                <div class="wrapper">
-                    <img class="item-img" src="img/main/Жая.png" alt="">
-                </div>
-                <div class="item-description hidden">
-                    <div class="cost"> 500 ₽/кг</div>
-                    <span class="description-title ">
-                        Жая
-                    </span>
-                    Невероятно вкусное блюдо.
-                    Готовится из филейной вырезки конины.
-                    Куски мяса солят сухим посолом, укладывают в кастрюлю для просаливания.
-                    Просолившееся мясо просушивают, вялят, коптят и варят по типу жала.
-                    Варить жая можно вместе с казы в одной воде и тоже 2 часа. Перед подачей на стол жая тонко
-                    нарезают
-                    и украшают зеленью.
-                </div>
-            </div>
-            <div class="item">
-                <img class="info-img" src="img/main/info_icon.svg" alt="">
-                <div class="wrapper">
-                    <img class="item-img" src="img/main/казы.png" alt="">
-                </div>
-                <div class="item-description hidden">
-                    <div class="cost"> 800 ₽/кг</div>
-                    <span class="description-title ">
-                        Казы
-                    </span>
-                    Популярность этой колбасы объясняется ее полезными свойствами.
-                    Казы несет те же полезные свойства, что и сама конина.
-                    Конская колбаса и ее польза обусловлена бОльшим количеством белка,
-                    чем во всех остальных видах мяса. Кроме того, повышенное содержание
-                    органических кислот и баланс витаминов и минералов способны принести
-                    пользу деятельности ЖКТ и нормализовать его функцию.
-                </div>
-            </div>
-            <div class="item">
-                <img class="info-img" src="img/main/info_icon.svg" alt="">
-                <div class="wrapper">
-                    <img class="item-img" src="img/main/Мойын.png" alt="">
-                </div>
-                <div class="item-description hidden">
-                    <div class="cost"> 450 ₽/кг</div>
-                    <span class="description-title ">
-                        Мойын
-                    </span>
-                    Кусок мяса, представляющий собой шею.
-                    По традициям преподносится жене, показывая ее возможность управлять мужчиной.
-                </div>
-            </div>
-            <div class="item">
-                <img class="info-img" src="img/main/info_icon.svg" alt="">
-                <div class="wrapper">
-                    <img class="item-img" src="img/main/Шужык.png" alt="">
-                </div>
-                <div class="item-description hidden">
-                    <div class="cost"> 400 ₽/кг</div>
-                    <span class="description-title ">
-                        Шужык
-                    </span>
-                    Колбаса из конины.
-                </div>
-            </div>
-        </div>
+        <div class="item-list flex hidden switched"></div>
     </div>
 </article>
 <article id='sales'>
@@ -260,47 +83,8 @@
         <h2>Выгодное предложение!</h2>
         <h3>Только сегодня!</h3>
     </div>
-    <div class="item-list flex">
-        <div class="item">
-            <img class="info-img" src="img/main/info_icon.svg" alt="">
-            <div class="wrapper">
-                <img class="item-img" src="img/main/all_cheese.png" alt="">
-            </div>
-            <div class="item-description hidden">
-                <div class="cost"> 700 ₽</div>
-                <span class="description-title ">
-                        Все виды сыров
-                    </span>
-                В предложение входит 1 кг iрiмшiк и 1 кг курта
-            </div>
-        </div>
-        <div class="item">
-            <img class="info-img" src="img/main/info_icon.svg" alt="">
-            <div class="wrapper">
-                <img class="item-img" src="img/main/all_meat.png" alt="">
-            </div>
-            <div class="item-description hidden">
-                <div class="cost"> 900 ₽</div>
-                <span class="description-title ">
-                        Все виды мясной продукции
-                    </span>
-                В предложение входит 1 кг жая и 1 кг казы
-            </div>
-        </div>
-        <div class="item">
-            <img class="info-img" src="img/main/info_icon.svg" alt="">
-            <div class="wrapper">
-                <img class="item-img" src="img/main/all_milk.png" alt="">
-            </div>
-            <div class="item-description hidden">
-                <div class="cost"> 900 ₽</div>
-                <span class="description-title ">
-                        Все виды молока
-                    </span>
-                В предложение входит 1 л шубата, 1 л кумса, 10 л коровьего молока, 2 л козьего молока
-            </div>
-        </div>
-    </div>
+    <!--Sales-->
+    <div class="item-list flex"></div>
 </article>
 <div class="space" style="height: 20px"></div>
 <article id="gallery">
