--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script async type="text/javascript" src="javascript/sale.js"></script>
     <script async type="text/javascript" src="javascript/gallery.js"></script>
+    <script async type="text/javascript" src="javascript/comment.js"></script>
     <script async type="text/javascript" src="javascript/json_reader.js"></script>
 </head>
 <header>
@@ -121,39 +122,7 @@
         <h3>Благодаря вашим отзывам мы становимся лучше!</h3>
     </div>
     <div class="feedback_messages flex">
-        <div class="message left flex">
-            <img class="thumbnail" src="img/main/message-icon.jpg">
-            <div class="content">
-                <div class="user_name">
-                    Алена, 30 лет
-                </div>
-                <div class="context">Прекрасный магазин с хорошим обслуживанием. Уголок прекрасной страны с хорошими
-                    традициями и обычаями.
-                </div>
-            </div>
-        </div>
-        <div class="message right flex">
-            <img class="thumbnail" src="img/main/message-icon.jpg">
-            <div class="content">
-                <div class="user_name">
-                    Дмитрий, 20 лет
-                </div>
-                <div class="context">Уже более года являюсь клиентом данного магазина. Обслуживание уже как в семье.
-                    Всегда свежая продукции без ГМО и консервантов.
-                </div>
-            </div>
-        </div>
-        <div class="message left flex">
-            <img class="thumbnail" src="img/main/message-icon.jpg">
-            <div class="content">
-                <div class="user_name">
-                    Нурлан, 24 года
-                </div>
-                <div class="context">Прекрасный магазин со свежей продукцией. Уехал из дома давно, но питаюсь как
-                    дома.
-                </div>
-            </div>
-        </div>
+
     </div>
 </article>
 <article id="feedback_form">
